--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vitalis - Premium BMI Calculator</title>
+    <title>BMI Calculator</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         :root {
             --primary: #4a6fa5;
+            --primary2: #ff6f00; 
             --secondary: #166088;
+            --secondary2: #dc3545;
             --accent: #4fc3f7;
             --light: #f8f9fa;
             --dark: #212529;
@@ -53,7 +55,7 @@
         
         .visualization-section {
             padding: 40px;
-            background: linear-gradient(145deg, var(--primary) 0%, var(--secondary) 100%);
+            background: linear-gradient(145deg, var(--primary2) 0%, var(--secondary2) 100%);
             color: white;
             display: flex;
             flex-direction: column;
@@ -231,7 +233,7 @@
 <body>
     <div class="container">
         <section class="calculator-section">
-            <h1>Vitalis BMI Calculator</h1>
+            <h1>BMI Calculator</h1>
             <h2>Understand your body composition</h2>
             
             <div class="form-group">
